added simple gdpr compliant page counter

--- a/template.html
+++ b/template.html
@@ -316,6 +316,9 @@
               $endif$
             </a>
           $endfor$
+	      <a href="https://librecounter.org/referer/show" class="text-gray-500 hover:text-blue-500 transition-colors duration-200 mx-2" target="_blank">
+			<img src="https://librecounter.org/outline-orange.svg" referrerPolicy="unsafe-url" width="24"/>
+	      </a>
         </div>
         $endif$
       </div>
